# genetinav

./: .gitignore  LICENSE  README.md  pyproject.toml
src/genetinav/: api_client.py  cache.py  chunk_cache.py  cli.py  command_parser.py  command_router.py  db.py  favorites.py  gene_service.py  history.py  models.py  navigation_history.py  sequence.py  settings.py  textual_app.py  themes.py
src/genetinav/ui_textual/: about_modal.py  base_screen.py  command_palette.py  favorites_modal.py  help_modal.py  history_modal.py  home_screen.py  loading_screen.py  menu_modal.py  result_screen.py  sequence_viewer.tcss  sequence_viewer_controller.py  sequence_viewer_screen.py  settings_modal.py  theme.py
src/genetinav/ui_textual/widgets/: __init__.py  gc_track_widget.py  legend_widget.py  minimap_widget.py  ruler_widget.py  sequence_track_widget.py  stats_footer_widget.py
src/genetinav/utils/: errors.py  export.py  validation.py
tests/: test_api_client.py  test_cache.py  test_cli_routing.py  test_cli_smoke.py  test_command_parser.py  test_db.py  test_errors.py  test_favorites.py  test_gene_service.py  test_history.py  test_legacy_removed.py  test_models.py  test_navigation_history.py  test_sequence.py  test_settings.py  test_ui_sequence_viewer_nav.py  test_validation.py
