[project]
name = "genetinav"
version = "0.1.0"
description = "GenetiNav — navigational genomics toolkit"
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["genomics", "bioinformatics", "terminal", "cli", "ensembl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Terminals",
]
dependencies = [
    "typer",
    "httpx",
    "textual",
]

[project.urls]
Homepage = "https://github.com/biowess/genetinav"
Documentation = "https://github.com/biowess/genetinav#readme"
Repository = "https://github.com/biowess/genetinav"
"Bug Tracker" = "https://github.com/biowess/genetinav/issues"

[project.scripts]
genetinav = "genetinav.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
